testsuite/parser_tests/fail/expr_err.0.psl
1 = 12;
a = (1 -);
b = (*2);
c = 1 - 1 + 12);
12 /;
